// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountsTable creates empty Table with expected params 1`] = `
<div>
  <div
    data-testid="Table"
  />
</div>
`;

exports[`AccountsTable renders Name column as expected when expandable and expanded 1`] = `
<div>
  <div
    class="flex pl-NaN"
  >
    <button
      type="button"
    >
      <svg
        class="mr-1 text-xs opacity-50"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.178 19.569a.998.998 0 0 0 1.644 0l9-13A.999.999 0 0 0 21 5H3a1.002 1.002 0 0 0-.822 1.569l9 13z"
        />
      </svg>
    </button>
    <a
      class="badge hover:text-white info"
      data-tooltip-id="assets"
      href="/dashboard/accounts/assets"
    >
      Assets
    </a>
  </div>
</div>
`;

exports[`AccountsTable renders Name column as expected when expandable and not expandded 1`] = `
<div>
  <div
    class="flex pl-NaN"
  >
    <button
      type="button"
    >
      <svg
        class="mr-1 text-xs opacity-50"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.536 21.886a1.004 1.004 0 0 0 1.033-.064l13-9a1 1 0 0 0 0-1.644l-13-9A1 1 0 0 0 5 3v18a1 1 0 0 0 .536.886z"
        />
      </svg>
    </button>
    <a
      class="badge hover:text-white info"
      data-tooltip-id="assets"
      href="/dashboard/accounts/assets"
    >
      Assets
    </a>
  </div>
</div>
`;

exports[`AccountsTable renders Total column as expected 1`] = `
<div>
  <span>
    €10.00
  </span>
</div>
`;
